<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UPET</string>
    <string name="index_fondo">index_fondo</string>
    <string name="btn_iniciarsesion">INICIAR SESIÓN</string>
    <string name="btn_registrarse">REGISTRARSE</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="from">from</string>
    <string name="astermind_vector">astermind_vector</string>
    <string name="background_login">background_login</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="olvide_mi_contraseña">Olvide mi contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="bachground_dog">bachground_dog</string>
    <string name="continuar">Continuar</string>
    <string name="restablecer">Restablecer</string>
    <string name="restablecer_contrasena">Restablecer contraseña</string>
    <string name="flotanteadoptar">flotanteAdoptar</string>
    <string name="botonmensaje">botonMensaje</string>
    <string name="nombre_dueño">Nombre dueño</string>
    <string name="imagendueno">imagenDueno</string>
    <string name="info_due_o">Info. Dueño</string>
    <string name="peso">Peso</string>
    <string name="peso_peso">5.0kg</string>
    <string name="color">Color</string>
    <string name="rubio">Rubio</string>
    <string name="edad">Edad</string>
    <string name="anos">5.0 años</string>
    <string name="info">Info.</string>
    <string name="descp_prueba">Hola, soy y me gusta mucho jugar, me encanta salir a pasear y soy muy fiel.</string>
    <string name="sobre_mi">Sobre mi</string>
    <string name="municipio">Municipio</string>
    <string name="genero">Genero</string>
    <string name="nombre">Nombre</string>
    <string name="fotoPerro">fotoPerro</string>
    <string name="raza">Raza</string>
    <string name="correo_prueba_arturo">2119100462@soy.utj.edu.mx</string>
    <string name="texto_prueba_perfil">Soy un estudiante de Universidad, me gustan mucho los animales en especial los perros, no puedo vivir sin ellos.</string>
    <string name="agregar_mascota">Agregar</string>
    <string name="bienvenido_home">Bienvenido</string>
    <string name="adopta_un_nuevo_amigo">Adopta un nuevo amigo</string>
    <string name="foto_usuario">foto_usuario</string>
    <string name="imagen_usuario">imagen_usuario</string>
    <string name="nombre_prueba">Arturo Méndez</string>
    <string name="mi_historia_texto">Mi historia</string>
    <string name="mis_mascotas_texto">Mis mascotas</string>
    <string name="nombre_mascota_tarjeta">Nombre</string>
    <string name="edad_card">Edad</string>
    <string name="municipio_card">Municipio</string>
    <string name="nombre_perro">Nombre</string>
    <string name="subir_foto">subir_foto</string>
    <string name="imagen_perro_add">imagen_perro_add</string>
    <string name="seleccionar_genero">Seleccionar genero</string>
    <string name="seleccionar_municipio">Seleccionar municipio</string>
</resources>