<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DogsScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/gFotoMascota"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:contentDescription="@string/fotoPerro"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/dog1" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/background"
            android:elevation="10dp"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/gNombreMascota"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/nombre"
                        android:textSize="25sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/gGenero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_light"
                        android:text="@string/genero"
                        android:textAlignment="center"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

                <TextView
                    android:id="@+id/gUbicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/ubuntu_mediumitalic"
                    android:text="@string/municipio"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="35dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/sobre_mi"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <TextView
                    android:id="@+id/gDescripcioni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/descp_prueba"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="35dp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/info"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:showDividers="middle">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/info_shape"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/gEdad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_bold"
                            android:text="@string/anos"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/edad"
                            android:textAlignment="center"
                            android:textSize="14sp"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/info_shape"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/gColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_bold"
                            android:text="@string/rubio"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/color"
                            android:textAlignment="center"
                            android:textSize="14sp"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/info_shape"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/gRaza"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_bold"
                            android:text="@string/peso_peso"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_light"
                            android:text="@string/raza"
                            android:textAlignment="center"
                            android:textSize="14sp"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="35dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/info_due_o"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <ImageView
                        android:id="@+id/gFotoDueño"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/imagendueno"
                        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

                    <TextView
                        android:id="@+id/gNombreDueño"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/ubuntu_medium"
                        android:text="@string/nombre_dueño"
                        tools:ignore="TextContrastCheck" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/gBotonMensaje"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_button"
                        android:contentDescription="@string/botonmensaje"
                        app:srcCompat="@drawable/ic_baseline_message_24"
                        tools:ignore="ImageContrastCheck" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/gBotonAdoptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:clickable="true"
                android:contentDescription="@string/flotanteadoptar"
                android:focusable="true"
                app:srcCompat="@drawable/ic_baseline_pets_24" />

        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>