<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndexScreen">

    <!-- Imagen de fondo / No tocaar -->
    <ImageView
        android:id="@+id/gIndexFondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/index_fondo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/upet_index_fondo" />

    <!-- Fondo oscuro / No tocar -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/background_opacity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <!-- Nombre de la aplicación -->
    <TextView
        android:id="@+id/gTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/signikanegative_bold"
        android:shadowColor="#434343"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="115sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


    <!-- Contenedor de LinearLayout's -->
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Contenedor vertical/columna -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Boton Iniciar sesión -->
            <Button
                android:id="@+id/gBtnIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:elevation="5dp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/btn_iniciarsesion"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <!-- Espacio entre componentes -->
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <!-- Contenedor horizontal/fila -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:textAlignment="center">

                <!--  -->
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/ubuntu_light"
                    android:shadowColor="@color/black"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="10"
                    android:text="@string/no_tienes_una_cuenta"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="7dp"
                    android:layout_height="match_parent" />

                <!-- Boton para Registro -->
                <TextView
                    android:id="@+id/gBtnRegistrate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/ubuntu_bold"
                    android:shadowColor="@color/black"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="10"
                    android:text="@string/registrate"
                    android:textAlignment="center"
                    android:textColor="#CF5C10"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_lightitalic"
                android:text="@string/from"
                android:textAlignment="center"
                android:textColor="#ADFFFFFF"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="3dp" />

            <ImageView
                android:id="@+id/gFotoMascota"
                android:layout_width="79dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/astermind_vector"
                android:elevation="10dp"
                app:srcCompat="@drawable/ic_vector_astermind" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>