<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="386dp" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/surface_rounded_corners_top"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <!--<EditText
                android:id="@+id/gEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/btn_iniciarsesion"
                android:textColor="?attr/colorOnBackground"
                android:textSize="30sp" />

            <!-- TextInput para Correo Electronico -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_electronico">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_light"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <!--<EditText
                android:id="@+id/gPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />-->

            <!-- TextInput para Contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_light"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <!-- Boton Iniciar Sesion -->
            <Button
                android:id="@+id/gButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/continuar"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/empty_tall_divider"
                android:orientation="horizontal"
                android:showDividers="middle">

                <!-- Recordar sesion / No cerrar sesion -->
                <CheckBox
                    android:id="@+id/gRecordar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/recuerdame"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <!-- Boton por si olvide mi contraseña -->
                <TextView
                    android:id="@+id/gOlvide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/olvide_mi_contraseña"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>